--- a/README
+++ b/README
@@ -3,10 +3,5 @@ CHEMKIN READER USING BOOST::REGEX
 Boost Regex Doc:
 http://www.boost.org/doc/libs/1_46_1/libs/regex/doc/html/index.html
 
-Install:
-mkdir build
-cd build
-cmake ..
-make
-cd ..
+cmake -G"Eclipse CDT4 - Unix Makefiles" -D CMAKE_BUILD_TYPE=Debug .
 ./chemkinReader.sh
