Edited README via GitHub

--- a/README
+++ b/README
@@ -3,9 +3,6 @@ CHEMKIN READER USING BOOST::REGEX
 Boost Regex Doc:
 http://www.boost.org/doc/libs/1_46_1/libs/regex/doc/html/index.html
 
-cmake -G"Eclipse CDT4 - Unix Makefiles" -D CMAKE_BUILD_TYPE=Debug .
-./chemkinReader.sh
-
 ===================================
 INSTALL
 ===================================
@@ -14,6 +11,10 @@ mkdir build
 cd build
 cmake ..
 make
+
+OR (if you use eclipse)
+
+cmake -G"Eclipse CDT4 - Unix Makefiles" -D CMAKE_BUILD_TYPE=Debug .
 
 ===================================
 RUN
